# triathlon-coach-backend

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
app/: batch_utils.py  config.py  database.py  llm.py  main.py  prompts.py  schemas.py
app/data/: ciqual_seed.py
app/models/: base.py
app/routers/: ai.py  athletes.py  batch_cooking.py  meals.py  races.py  sessions.py  wellness.py
